# dogs

./: .coveragerc  .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  env.template  pyproject.toml
.github/: dependabot.yml
.github/workflows/: checks.yml
docker/: docker-compose.yml
media_service/: settings.py  urls.py
src/api/: sync_views.py  urls.py
src/api/bread/: serializers.py  tasks.py  views.py
src/api/dogs/: filters.py  serializers.py  tasks.py  views.py
src/api/image/: serializers.py  views.py
src/core/: models.py
src/core/migrations/: 0001_initial.py  0002_image.py  0003_alter_image_bread.py  0004_remove_image_url.py  0005_remove_bread_adaptability_and_more.py  0006_alter_bread_origin.py  0007_alter_bread_bred_for_alter_bread_breed_group_and_more.py  0008_alter_bread_external_id.py
src/core/tests/: common.py  test_filter.py  test_models.py  test_tasks.py  test_views.py
src/media_service/: service_settings.py  settings.py  urls.py
src/tests/: test_http.py
src/utils/: handler.py  http.py
