[tool.poetry]
name = "dogs"
version = "0.1.0"
description = ""
authors = ["daniel <ntdu198@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pydantic-settings = "^2.4.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
