[tool.poetry]
name = "dogs"
version = "0.1.0"
description = ""
authors = ["daniel <ntdu198@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pydantic-settings = "^2.4.0"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
django-debug-toolbar = "^4.4.6"
drf-yasg = "^1.21.7"
setuptools = "^74.1.2"
django-storages = "^1.14.4"
boto3 = "^1.35.14"
django-filter = "^24.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
